--- a/main/templates/main/about.html
+++ b/main/templates/main/about.html
@@ -1,5 +1,8 @@
 {% extends "main/base.html" %}
 {% load static %}
+{% load product_tags %}
+            {% block  head_catalog%}
+            {% endblock %}
             {% block content %}
             <div class="about-us">
                 <h2>Про нас</h2>
