--- a/products/templates/products/catalog.html
+++ b/products/templates/products/catalog.html
@@ -143,7 +143,7 @@
               {% endif %}
             </div>
             <div class="product-thumb">
-              <a href="{% url "products:product" %}">
+              <a href="{% url "catalog:product" product.slug %}">
                 {% if  product.image %}
               <img src="{{ product.image.url}}">
               {%else%}
@@ -153,7 +153,7 @@
             </div>
             <div class="product-details">
               <h4>
-                <a href="{% url "products:product" %}">{{product.name}}</a>
+                <a href="{% url "catalog:product" product.slug %}">{{product.name}}</a>
               </h4>
               <p class="product-excerpt">{{product.description}}</p>
               <div class="produc-bottom-details">
