--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -107,7 +107,7 @@
                                 <ul class="dropdown-menu">
                                   {% tag_category as categories %}
                                   {% for category in categories %}
-                                  <li><a class="dropdown-item" href="{% url "products:index" %}">{{category.name}}</a></li>
+                                  <li><a class="dropdown-item" href="{% url "catalog:index" category.slug%}">{{category.name}}</a></li>
                                   {% endfor %}
                                 </ul>
                               </li>
