--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -7,7 +7,7 @@
                   <div class="row text-center">
                     {% tag_category as categories %}
                     {% for category in categories %}
-                      <div class="col"><a href="{% url "products:index" %}">{{category.name}}</a></div>
+                      <div class="col"><a href="{% url "catalog:index" category.slug %}">{{category.name}}</a></div>
                     {% endfor %}
                   </div>
               </div>
