--- a/products/templates/products/catalog.html
+++ b/products/templates/products/catalog.html
@@ -9,7 +9,7 @@
             <nav class="breadcrums">
                 <ul>
                     <li><a href="{% url "main:index" %}">Головна</a></li>
-                    <li><span>Category name</span></li>
+                    <li>{{category_name}}</li>
                 </ul>
             </nav>
         </div>
@@ -120,7 +120,7 @@
     <div class="col-lg-9 col-md-8">
         <div class="row">
           <div class="col-12">
-            <h2 class="section-title-catalog"><span>Category Name</span></h2>
+            <h2 class="section-title-catalog"><span>{{category_name}}</span></h2>
           </div>
         </div>
       <div class="row">
@@ -129,7 +129,6 @@
             <option value="1" selected>Від дешевих до дорогих</option>
             <option value="2">Від дорогих до дешевих</option>
             <option value="3">За назвою</option>
-            <option value="4">По рейтингу</option>
           </select>
         </div>
       </div>
@@ -179,13 +178,29 @@
         <div class="col-12">
           <nav aria-label="Page navigation">
             <ul class="pagination">
-              <li class="page-item"><a class="page-link" href="#"><<</a></li>
-              <li class="page-item active" ><a class="page-link" href="#">1</a></li>
-              <li class="page-item"><a class="page-link" href="#">2</a></li>
-              <li class="page-item"><a class="page-link" href="#">3</a></li>
-              <li class="page-item"><a class="page-link" href="#">4</a></li>
-              <li class="page-item"><a class="page-link" href="#">5</a></li>
-              <li class="page-item"><a class="page-link" href="#">>></a></li>
+              <li class="page-item {% if not products.has_previous %} disabled {% endif %}">
+                <a class="page-link" href="{% if products.has_previous %} 
+                {% url "catalog:index" slug_url products.previous_page_number %}
+                {% else %}
+                #
+                {% endif %}"><<</a>
+              </li>
+
+              {% for page in products.paginator.page_range %}
+              {% if page >= products.number|add:-2 and page <= products.number|add:2 %}
+              <li class="page-item {% if products.number == page %} active {% endif %}">
+                <a class="page-link" href="{% url "catalog:index" slug_url page %}">{{page}}</a>
+              </li>
+              {% endif %}
+              {% endfor %}  
+
+              <li class="page-item {% if not products.has_next %} disabled {% endif %}">
+                <a class="page-link" href="{% if products.has_next %} 
+                {% url "catalog:index" slug_url products.next_page_number %}
+                {% else %}
+                #
+                {% endif %}">>></a>
+              </li>
             </ul>
           </nav>
         </div>
