--- a/products/templates/products/catalog.html
+++ b/products/templates/products/catalog.html
@@ -179,9 +179,7 @@
           <nav aria-label="Page navigation">
             <ul class="pagination">
               <li class="page-item {% if not products.has_previous %} disabled {% endif %}">
-                <a class="page-link" href="{% if products.has_previous %} 
-                {% url "catalog:index" slug_url products.previous_page_number %}
-                {% else %}
+                <a class="page-link" href="{% if products.has_previous %}?page={{products.previous_page_number}}{% else %}
                 #
                 {% endif %}"><<</a>
               </li>
@@ -189,14 +187,14 @@
               {% for page in products.paginator.page_range %}
               {% if page >= products.number|add:-2 and page <= products.number|add:2 %}
               <li class="page-item {% if products.number == page %} active {% endif %}">
-                <a class="page-link" href="{% url "catalog:index" slug_url page %}">{{page}}</a>
+                <a class="page-link" href="?page={{page}}">{{page}}</a>
               </li>
               {% endif %}
               {% endfor %}  
 
               <li class="page-item {% if not products.has_next %} disabled {% endif %}">
                 <a class="page-link" href="{% if products.has_next %} 
-                {% url "catalog:index" slug_url products.next_page_number %}
+                ?page={{products.next _page_number}}
                 {% else %}
                 #
                 {% endif %}">>></a>
